<resources>
    <string name="app_name">Composition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sostav_number">Состав числа</string>
    <string name="roles">Правила игры: перед вами будет три фигуры,две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма из двух нижних фигур была равна числу в верхней фигуре и для этого нужно вставить недостающие число. Пример: в верхнем кругу число 7, в одном из нижних знак вопроса, а в другом число 4, значит на месте вопросительного знака должно быть число 3, 3 и 4 в сумме дают 7.</string>
    <string name="ok">Понятно</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="test">Тестовый уровень</string>
    <string name="easy_level">Легкий уровень</string>
    <string name="middle_level">Средний уровень</string>
    <string name="hard_level">Сложный уровень</string>
    <string name="timer">00:00</string>
    <string name="coin">8</string>
    <string name="right_answer_in_stroke">Правильных ответов %s (минимум %s)</string>
    <string name="required_answer">Необходимое количество правильных ответов : %s</string>
    <string name="score">Ваш счет: %s</string>
    <string name="real_percent">Процент правильных результатов: %s</string>
    <string name="percent">Необходимый процент правильных ответов: %s</string>
    <string name="try_again">Попробовать снова</string>
    <string name="right_number">\?</string>
</resources>