<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="viewModel"
            type="com.composit.composition.presentation.GameViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient"
        tools:context=".presentation.GameFragment">

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@{viewModel.formattedTime}"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/timer" />

        <TextView
            android:id="@+id/tv_sum"
            style="@style/TextAppearance.MaterialComponents.Subtitle2"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/circle_button"
            android:gravity="center"
            app:numberToText="@{viewModel.question.sum}"
            android:textColor="@color/white"
            android:textSize="60sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_timer"
            tools:text="@string/coin" />


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_sum">

            <TextView
                android:id="@+id/tv_left_number"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/custom_view_3"
                android:gravity="center"
                app:numberToText="@{viewModel.question.visibleNumber}"
                android:textColor="@color/white"
                android:textSize="50sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_sum"
                tools:text="@string/coin" />


            <TextView
                android:id="@+id/tv_right_number"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="64dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/custom_view_4"
                android:gravity="center"
                android:text="\?"
                android:textColor="@color/white"
                android:textSize="50sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/tv_left_number"
                app:layout_constraintTop_toBottomOf="@+id/tv_sum" />


        </LinearLayout>

        <TextView
            android:id="@+id/tv_question_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:text="@{viewModel.progressAnswers}"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:enoughCount="@{viewModel.enoughCountOfRightAnswers}"
            app:layout_constraintEnd_toEndOf="@+id/progress_bar"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/progress_bar"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar"
            tools:text="@string/right_answer_in_stroke" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="20dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_question_right"
            app:layout_constraintVertical_bias="0.977">

            <TextView
                android:id="@+id/tv_option_1"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/custom_view_3"
                android:gravity="center"
                app:onOptionItemClick="@{(option)->viewModel.chooseAnswer(option)}"
                android:text="@{viewModel.question.options.get(0).toString()}"
                android:textSize="30sp"
                tools:text="1" />

            <TextView
                android:id="@+id/tv_option_2"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:layout_marginStart="50sp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/custom_view_4"
                android:gravity="center"
                app:onOptionItemClick="@{(option)->viewModel.chooseAnswer(option)}"
                android:text="@{viewModel.question.options.get(1).toString()}"
                android:textSize="30sp"
                tools:text="2" />

            <TextView
                android:id="@+id/tv_option_3"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:layout_marginStart="50sp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/custom_view_3"
                android:gravity="center"
                app:onOptionItemClick="@{(option)->viewModel.chooseAnswer(option)}"
                android:text="@{viewModel.question.options.get(2).toString()}"
                android:textSize="30sp"
                tools:text="3" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="36dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/tv_option_4"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:layout_gravity="start"
                android:layout_marginBottom="100dp"
                android:background="@drawable/custom_view_4"
                android:gravity="center"
                app:onOptionItemClick="@{(option)->viewModel.chooseAnswer(option)}"
                android:text="@{viewModel.question.options.get(3).toString()}"
                android:textSize="30sp"
                tools:text="4" />

            <TextView
                android:id="@+id/tv_option_5"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="50sp"
                android:layout_marginBottom="100dp"
                app:onOptionItemClick="@{(option)->viewModel.chooseAnswer(option)}"
                android:text="@{viewModel.question.options.get(4).toString()}"
                android:background="@drawable/custom_view_3"
                android:gravity="center"
                android:textSize="30sp"
                tools:text="5" />

            <TextView
                android:id="@+id/tv_option_6"
                android:layout_width="80sp"
                android:layout_height="80sp"
                android:layout_marginStart="50sp"
                android:layout_marginBottom="100dp"
                app:onOptionItemClick="@{(option)->viewModel.chooseAnswer(option)}"
                android:text="@{viewModel.question.options.get(5).toString()}"
                android:background="@drawable/custom_view_4"
                android:gravity="center"
                android:textSize="30sp"
                tools:text="6" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="45dp"
            android:max="100"
            android:progress="@{viewModel.percentOfRightAnswer}"
            android:secondaryProgress="@{viewModel.minPercent}"
            android:secondaryProgressTint="@android:color/background_dark"
            app:enoughPercent="@{viewModel.enoughPercentOfRightAnswers}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
